--- a/cont.html
+++ b/cont.html
@@ -162,7 +162,7 @@
 				<h1>placement</h1>
 				<nav>
 					<ul>
-						<li><a href="home.html"> &nbsp Home &nbsp </a></li>
+						<li><a href="index.html"> &nbsp Home &nbsp </a></li>
 						<li><a href="check.html"> &nbsp Classes &nbsp </a></li>
 						<li><a href="gall.html"> &nbsp Photo Gallery &nbsp </a></li>
 						<li><a href="sche.html"> &nbsp Tournaments &nbsp </a></li>
