--- a/gall.html
+++ b/gall.html
@@ -178,7 +178,7 @@
 				<h1>placement</h1>
 				<nav>
 					<ul>
-						<li><a href="home.html"> &nbsp Home &nbsp </a></li>
+						<li><a href="index.html"> &nbsp Home &nbsp </a></li>
 						<li><a href="check.html"> &nbsp Classes &nbsp </a></li>
 						<li><a href=""class="current"> &nbsp Photo Gallery &nbsp </a></li>
 						<li><a href="sche.html"> &nbsp Tournaments &nbsp </a></li>
