fixed instructer bio, address, etc.

--- a/choa.html
+++ b/choa.html
@@ -176,11 +176,10 @@
 					</figure>
 					<hgroup>
 						<hr>
-						<h2>Name</h2> 
+						<h2>NATHANIEL SIDES</h2> 
 						</hr>
 					</hgroup>
-					<p>info stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff</p>
-				<article>
+					<p>Has been teaching and coaching private lessons and group classes in central Virginia for the past five years. He has fenced competitively on both the local and national level and is a rated fencer in all three weapons, foil, epee and saber. In addition he is also a rated fencing referee and a ''Member-at-Large'' on the Virginia Division Board of the United States Fencing Association. Nathaniel was also highly involved in the Virginia 4-H program from which he brings a great deal of leadership training. Coach Sides aspires to teach students to not only excel at the sport of fencing, but more importantly to be people of character, honor, and discipline.<article>
 					<div style="position: relative; width: 600px; height: 800px;">    
 						<div style="position: absolute; bottom: 5px; background-color: #eee">
 							<h4><a href="#top">&#8657 Top of page</a></h4>
