--- a/gall.html
+++ b/gall.html
@@ -193,6 +193,16 @@
 			<table style="width:100%">
 			<caption><div style="background-color: #005ce6"><h5> 2015-2016 </h5></div><p> &nbsp </p></caption>
 			<tr>
+				<td><a target="_blank" href="gallery/G10.jpg"><img src="gallery/G10.jpg" alt=""  width="99%" height="99%" /></a></td>
+				<td><a target="_blank" href="gallery/G11.jpg"><img src="gallery/G11.jpg" alt=""  width="99%" height="99%" /></a></td>
+				<td><a target="_blank" href="gallery/G12.jpg"><img src="gallery/G12.jpg" alt=""  width="99%" height="99%" /></a></td>
+			</tr>
+			<tr>
+				<td>August 22, 2015</td>
+				<td>August 22, 2015</td>
+				<td>August 21, 2015</td>
+			</tr>
+			<tr>
 				<td><a target="_blank" href="gallery/G1.jpg"><img src="gallery/G1.jpg" alt=""  width="99%" height="99%" /></a></td>
 				<td><a target="_blank" href="gallery/G2.jpg"><img src="gallery/G2.jpg" alt=""  width="99%" height="99%" /></a></td>
 				<td><a target="_blank" href="gallery/G3.jpg"><img src="gallery/G3.jpg" alt=""  width="99%" height="99%" /></a></td>
@@ -222,6 +232,7 @@
 				<td>August 22, 2015</td>
 				<td>August 21, 2015</td>
 			</tr>
+			
 			</table>
 			</article>
 				<article>
