--- a/index.html
+++ b/index.html
@@ -177,28 +177,6 @@
 							<hr />
 					</hgroup>
 					<p>Were it was and info on pick here</p>
-				</article>    
-				<article>
-					<figure>
-						<img src="other/O2.jpg" alt="1"  width="99%" height="99%" />
-						<figcaption>Time</figcaption>
-					</figure>
-					<hgroup>
-						<h2>Title2</h2> 
-						<hr />
-					</hgroup>
-					<p>Were it was and info on pick here</p>
-				</article> 
-				<article>
-					<figure>
-						<img src="other/O3.jpg" alt="1"  width="99%" height="99%" />
-						<figcaption>Time</figcaption>
-					</figure>
-					<hgroup>
-						<h2>Title3</h2> 
-						<hr />
-					</hgroup>
-					<p>Were it was and info on pick here</p>
 				</article>
 				<article>
 					<div style="position: relative; width: 600px; height: 800px;">    
@@ -219,21 +197,22 @@
 						27 Redchurch Street<br />
 						Shoreditch<br />
 						London E2 7DP</p>
+					<p>&nbsp </p>
+					<p>BRFC Forwiding Adress<br />
+						27 Redchurch Street<br />
+						Shoreditch<br />
+						London E2 7DP</p>
 					<iframe 
 						width="100%" height="100%" frameborder="4" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.uk/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=charing+cross+road+london&amp;output=embed">
 					</iframe>
 					<a href="#" class="fa fa-facebook"></a>
-					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-google"></a>
-					<a href="https://www.youtube.com/channel/UCpZ5qUqpW4hW4zdfuBxMSJA" class="fa fa-youtube"></a>
-					<a href="#" class="fa fa-instagram"></a>
 					<p>&nbsp </p><p>&nbsp </p><p>&nbsp </p><p>&nbsp </p>
 				</section>
 			</aside>
 			<footer>
 			<p>&nbsp </p>
 				<p>
-				Blue Ridge Fencing Center &copy; 2017
+				Blue Ridge Fencing Center &copy; 2017 &nbsp &nbsp &nbsp &nbsp &nbsp Last Updated: 9/18/2017
 				</p>
 				<p>
 				
