--- a/choa.html
+++ b/choa.html
@@ -122,9 +122,14 @@
 			a {
 				color: #00000;
 				text-decoration: none;}
-			h1, h2, h3 {
+			h1, h2, h3, h8 {
 				font-weight: normal;}
 			h2 {
+				margin: 0px 0px 0px 0px;
+				color: #000000;
+				padding: 0px;
+				text-align: center;}
+			h8 {
 				margin: 0px 0px 0px 0px;
 				color: #000000;
 				padding: 0px;
@@ -172,14 +177,14 @@
 			<article>
 					<figure>
 						<img src="art/A2.jpg" alt="1"  width="99%" height="99%" />
-						<figcaption>Info</figcaption>
+						<figcaption></figcaption>
 					</figure>
 					<hgroup>
 						<hr>
 						<h2>NATHANIEL SIDES</h2> 
 						</hr>
 					</hgroup>
-					<p>Has been teaching and coaching private lessons and group classes in central Virginia for the past five years. He has fenced competitively on both the local and national level and is a rated fencer in all three weapons, foil, epee and saber. In addition he is also a rated fencing referee and a ''Member-at-Large'' on the Virginia Division Board of the United States Fencing Association. Nathaniel was also highly involved in the Virginia 4-H program from which he brings a great deal of leadership training. Coach Sides aspires to teach students to not only excel at the sport of fencing, but more importantly to be people of character, honor, and discipline.<article>
+					<p><h8>Has been teaching and coaching private lessons and group classes in central Virginia for the past five years. He has fenced competitively on both the local and national level and is a rated fencer in all three weapons, foil, epee and saber. In addition he is also a rated fencing referee and a ''Member-at-Large'' on the Virginia Division Board of the United States Fencing Association. Nathaniel was also highly involved in the Virginia 4-H program from which he brings a great deal of leadership training. Coach Sides aspires to teach students to not only excel at the sport of fencing, but more importantly to be people of character, honor, and discipline.</h8><article>
 					<div style="position: relative; width: 600px; height: 800px;">    
 						<div style="position: absolute; bottom: 5px; background-color: #eee">
 							<h4><a href="#top">&#8657 Top of page</a></h4>
@@ -187,33 +192,41 @@
 				</article>
 			</section>
 			<aside>
-				</section>
 				<section class="contact-details">
 					<h3>Class Times:</h3>
-					<p>thursday 3:15-4:25</p>
+					<p><a href="check.html"> Thursday 4:00-8:30 </a></p>
 					<hr />
-					<h3>Contact Infomatoin:</h3>
-					<p>poeple: <a href="mailto:books@example.com">  books@example.com</a></p>
-					<p>poeple: <a href="mailto:books@example.com">  books@example.com</a></p>
-					<p>BRFC<br />
-						27 Redchurch Street<br />
-						Shoreditch<br />
-						London E2 7DP</p>
-					<iframe 
-						width="100%" height="100%" frameborder="4" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.uk/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=charing+cross+road+london&amp;output=embed">
-					</iframe>
-					<a href="#" class="fa fa-facebook"></a>
-					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-google"></a>
-					<a href="https://www.youtube.com/channel/UCpZ5qUqpW4hW4zdfuBxMSJA" class="fa fa-youtube"></a>
-					<a href="#" class="fa fa-instagram"></a>
+					<h3>Contact Information:</h3>
+					<p>Email: <a href="mailto:brfcinfo@outlook.com">  brfcinfo@outlook.com</a></p>
+					<p>BRFC Address:<br />
+						&nbsp &nbsp 233 4th St NW<br />
+						&nbsp &nbsp Charlottesville<br />
+						&nbsp &nbsp VA 22903-4504</p>
+					<p> </p>
+					<p>Mailing Address:<br />
+						&nbsp &nbsp PO Box 329<br />
+						&nbsp &nbsp Ruckersville<br />
+						&nbsp &nbsp VA 22968</p>
+						<div id="map" style="width:230px;height:150px;background:yellow"></div>
+					<script>
+						function myMap() {
+							var mapCanvas = document.getElementById("map");
+							var mapOptions = {
+								center: new google.maps.LatLng(38.032259, -78.486956), zoom: 15
+							};
+							var map = new google.maps.Map(mapCanvas, mapOptions);
+							}
+				</script>
+
+				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+					<a href="https://www.facebook.com/BlueRidgeFencingCenterFencingCharlottesville" class="fa fa-facebook"></a>
 					<p>&nbsp </p><p>&nbsp </p><p>&nbsp </p><p>&nbsp </p>
 				</section>
 			</aside>
 			<footer>
 			<p>&nbsp </p>
 				<p>
-				Blue Ridge Fencing Center &copy; 2017
+				Blue Ridge Fencing Center &copy; 2017 &nbsp &nbsp &nbsp &nbsp &nbsp Last Updated: 9/25/2017
 				</p>
 				<p>
 				
