--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
 				<article>
 					<figure>
 						<img src="other/O1.jpg" alt="loading"  width="99%" height="99%" />
-						<figcaption>Time</figcaption>
+						<figcaption>August 21, 2015</figcaption>
 					</figure>
 					<hgroup>
-						<h2>Title1</h2> 
+						<h2>Tournament Day</h2> 
 							<hr />
 					</hgroup>
-					<p>Were it was and info on pick here</p>
+					<p>Students suited up, ready for a fencing tournament.</p>
 				</article>
 				<article>
 					<div style="position: relative; width: 600px; height: 800px;">    
@@ -188,31 +188,39 @@
 			<aside>
 				<section class="contact-details">
 					<h3>Class Times:</h3>
-					<p>thursday 3:15-4:25</p>
+					<p><a href="check.html"> Thursday 4:00-8:30 </a></p>
 					<hr />
-					<h3>Contact Infomatoin:</h3>
-					<p>poeple: <a href="mailto:books@example.com">  books@example.com</a></p>
-					<p>poeple: <a href="mailto:books@example.com">  books@example.com</a></p>
-					<p>BRFC<br />
-						27 Redchurch Street<br />
-						Shoreditch<br />
-						London E2 7DP</p>
-					<p>&nbsp </p>
-					<p>BRFC Forwiding Adress<br />
-						27 Redchurch Street<br />
-						Shoreditch<br />
-						London E2 7DP</p>
-					<iframe 
-						width="100%" height="100%" frameborder="4" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.uk/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=charing+cross+road+london&amp;output=embed">
-					</iframe>
-					<a href="#" class="fa fa-facebook"></a>
+					<h3>Contact Information:</h3>
+					<p>Email: <a href="mailto:brfcinfo@outlook.com">  brfcinfo@outlook.com</a></p>
+					<p>BRFC Address:<br />
+						&nbsp &nbsp 233 4th St NW<br />
+						&nbsp &nbsp Charlottesville<br />
+						&nbsp &nbsp VA 22903-4504</p>
+					<p> </p>
+					<p>Mailing Address:<br />
+						&nbsp &nbsp PO Box 329<br />
+						&nbsp &nbsp Ruckersville<br />
+						&nbsp &nbsp VA 22968</p>
+						<div id="map" style="width:230px;height:150px;background:yellow"></div>
+					<script>
+						function myMap() {
+							var mapCanvas = document.getElementById("map");
+							var mapOptions = {
+								center: new google.maps.LatLng(38.032259, -78.486956), zoom: 15
+							};
+							var map = new google.maps.Map(mapCanvas, mapOptions);
+							}
+				</script>
+
+				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+					<a href="https://www.facebook.com/BlueRidgeFencingCenterFencingCharlottesville" class="fa fa-facebook"></a>
 					<p>&nbsp </p><p>&nbsp </p><p>&nbsp </p><p>&nbsp </p>
 				</section>
 			</aside>
 			<footer>
 			<p>&nbsp </p>
 				<p>
-				Blue Ridge Fencing Center &copy; 2017 &nbsp &nbsp &nbsp &nbsp &nbsp Last Updated: 9/18/2017
+				Blue Ridge Fencing Center &copy; 2017 &nbsp &nbsp &nbsp &nbsp &nbsp Last Updated: 9/25/2017
 				</p>
 				<p>
 				
